[package]
name = "biscuit-actix-middleware"
version = "0.2.0"
edition = "2021"

license = "Apache-2.0"

repository = "https://github.com/biscuit-auth/biscuit-actix-middleware"
documentation = "https://docs.rs/biscuit-actix-middleware/"
readme = "README.md"

description = "Biscuit middleware for actix-web."

keywords = ["http", "actix-web", "biscuit", "token", "authorization"]
categories = ["asynchronous", "web-programming"]

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = [
    "macros",
] }
actix-web-httpauth = "0.8.0"
biscuit-auth = { version = "4.0.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
time = { version = "0.3.20", default-features = false }
tracing = { version = "0.1.37", default-features = false, optional = true }

[dev-dependencies]
biscuit-auth = { version = "4.0.0" }
tracing-actix-web = "0.7.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
